<resources>
    <string name="app_name">LabProApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correo_text">Ingrese su correo electrónico</string>
    <string name="password_text">Ingrese una contraseña</string>
    <string name="about_name_text">Sobre nosotros</string>
    <string name="horario_name_text">Horario</string>
    <string name="historial_name_text">Historial de Reservas</string>
    <string name="perfil_name_text">Perfil</string>
    <string name="reservas_name_text">Reservas</string>
    <string name="rep_password_text">Repita su contraseña</string>
    <string name="registrar_button_text">Registrarse</string>
    <string name="password_login_text">Ingrese su contraseña</string>
    <string name="login_button_text">Iniciar sesión</string>
    <string name="title_activity_boottom_navigation">BoottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="about_text">El Laboratorio de Prototipado de la Universidad de Antioquia fue abierto el 28 de Agosto de 2023.\nEste espacio permite a las personas crear prototipos y desarrollar proyectos de manera tangible. \nBusca fomentar la creatividad, la innovación y el aprendizaje práctico</string>
    <string name="title_horario_name">HORARIO LABORATORIO DE PROTOTIPADO</string>
    <string name="historial_text">HISTORIAL DE RESERVAS</string>
    <string name="reserva1_text">Reserva: Máquina 3D\nFecha: 30 de Agosto 2023</string>
    <string name="reserva2_text">Reserva: Máquina Cortadora Láser\nFecha: 12 de Septiembre 2023</string>
    <string name="name_text"></string>
    <string name="lastname_text"></string>
    <string name="programa_text"></string>
    <string name="numero_reservas_text"></string>
    <string name="emailp_text"></string>
    <string name="cedula_text"></string>

    <string name="reservas_title">RESERVAS LABORATORIO DE PROTOTIPADO</string>
    <string name="name_reserva_text">Ingrese su nombre completo</string>
    <string name="cedula_reserva_text">Ingrese su número de cédula</string>
    <string name="email_reserva_text">Ingrese su email</string>
    <string name="programa_academico_reserva_text">Ingrese su programa académico</string>
    <string name="maquina_reserva_text">Nombre de la máquina a reservar</string>
    <string name="fecha_reserva_text">Fecha de la reserva</string>
    <string name="reservar_button_text">Reservar</string>
    <string name="title_activity_navigation_drawer">LabProApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="name_app_text">LabProApp</string>
    <string name="welcome_text">¡Bienvenidos a LabProApp!</string>
    <string name="login_text">Ingresar</string>
    <string name="register_text">Registrarse</string>
    <string name="inicio_text">PROYECTOS</string>
    <string name="field">*Campo obligatorio</string>
    <string name="hora_reserva_text">Hora</string>
    <string name="name_edit_text">Ingrese su nombre</string>
    <string name="last_name_text">Ingrese su apellido</string>
    <string name="cedula_edit_text">Ingrese su cédula</string>
    <string name="edit_perfil_name_text">Editar Perfil</string>
    <string name="name_view_reserva">Nombre:</string>
    <string name="identi_view_reserva">Cedula:</string>
    <string name="email_view_reserva">Email:</string>
    <string name="programa_view_reserva">Programa:</string>
    <string name="maquina_view_reserva">Maquina:</string>
    <string name="fecha_view_reserva">Fecha</string>
    <string name="hora_view_reserva">Hora:</string>
    <string name="agenda_text">Texto para tu agenda</string>
    <string name="log_out_text">Cerrar sesión</string>
    <string name="selec_image">Seleccionar Imagen</string>
    <string name="descripcion_gallery_text">Descripción</string>
    <string name="createGallery_edit_text">Crear Galería</string>
    <string name="galeria_name">Nombre de la galería</string>
    <string name="url_edit_text">URL de la imágen\n</string>
    <string name="forgot_edit_text">¿Olvidaste tu contraseña?</string>
    <string name="save_edit_text">Guardar</string>


    <string-array name="maquina_options">
        <item>Impresora 3D Artillery Sidewinder</item>
        <item>Impresora 3D Creatly Ender 3 V2</item>
        <item>Cortadora Láser</item>
        <item>CNC</item>
    </string-array>

    <string-array name="programa_options">
        <item>Ingeniería electrónica</item>
        <item>Ingeniería eléctrica</item>
        <item>BioIngeniería</item>
        <item>Ingeniería Mecánica</item>
        <item>Ingeniería de Sistemas</item>
        <item>Artes</item>
        <item>Física</item>
    </string-array>
</resources>